manifests/apps/jellyfin/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jellyfin
  name: jellyfin
