manifests/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: jellyfin
          image: jellyfin-container-image
          securityContext:
            runAsUser: 1003
            runAsGroup: 1003
          ports:
            - containerPort: 8096
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "2700Mi"
              gpu.intel.com/i915: "1"
              cpu: "3000m"
          volumeMounts:
            - name: jellyfin-media-pvc
              mountPath: /media
            - name: jellyfin-config-pvc
              mountPath: /config
              subPath: config
            - name: jellyfin-config-pvc
              mountPath: /cache
              subPath: cache
      volumes:
        - name: jellyfin-config-pvc
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-media-pvc
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
