manifests/apps/jellyfin/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-service-1

  labels: 
    kubernetes.io/service-name: jellyfin-service
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
    - "192.168.5.3"
