manifests/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  ports:
    - port: 80
      targetPort: 8096
      protocol: TCP
  selector:
    app: jellyfin
