manifests/apps/jellyfin/ingress-pub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-pub
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jellyfin.blunders.dev
    secretName: jellyfin-secret-tls-pub
  rules:
  - host: jellyfin.blunders.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-service
            port:
              number: 80
