manifests/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.blunders.me
      secretName: jellyfin-secret-tls
  rules:
    - host: jellyfin.blunders.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 80
