manifests/apps/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames:
    - jellyfin.blunders.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: jellyfin-service
          port: 80
